# nice-archive

./: .gitignore  .gitlab-ci.yml  README.md  cleanup-script.sh  cve-loc-report.sh  flake.nix  nice-archive  nice-archive.py
.github/workflows/: main.yml
cves/custom-functions/: assertion-blocks.nix  nixos-test-old-kernel-onevm.nix  nixos-test-old-kernel.nix
cves/cve-2013-0249-curl-sasl-buffer-overflow/: attackerserver-vm.nix  client-vm.nix  curl-7.27.0-package.nix  flake.nix  readme.md  test.nix  test.py  vm-attacker.nix  vm-client.nix
cves/cve-2014-0160-heartbleed/: flake.nix  heartbleed-test.nix  heartbleed-vm.nix  readme.md  test.py  vm-attacker.nix  vm-client.nix  vm-server.nix
cves/cve-2014-0224-early-ccs/: early-ccs-mitm-vm.nix  early-ccs-test.nix  early-ccs-vm.nix  flake.nix  readme.md  test.py  vm-mitm.nix  vm.nix
cves/cve-2016-5195-dirty-cow/: default.nix  dirty-cow-test.nix  dirty-cow-vm.nix  readme.md  test.py  vm.nix
cves/cve-2019-0221-apache-tomcat-ssi-xss/: flake.nix  readme.md  server-vm.nix  test.nix  test.py  uncomment.sh  vm-admin.nix  vm-attacker.nix  vm-server.nix
cves/cve-2019-19725-sysstat-doublefree/: flake.nix  readme.md  server-vm.nix  test.nix  test.py  vm-server.nix
cves/cve-2020-7247-opensmtpd/: flake.nix  opensmtpd-test-rce.nix  (+5 more)
docs/: README.md  nice-archive-libs.md  reporting-vulnerabilities.md
src/: default.nix  flake.nix  nice-archive-lib.nix  old-kernel-tests-generator.nix  standalone-vm-generator.nix  test-template.nix  tests-generator.nix
src/assertion_blocks/: __init__.py  blocks.py  package.nix  pyproject.toml
(+203 files in other folders)
